--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Clone QA Repository
       run: |
         # Clone into a separate directory outside the current repository
-        git clone https://x-access-token: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@github.com/chirag504/adf_qa.git ../adf_qa
+        git clone https://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@github.com/chirag504/adf_qa.git ../adf_qa
 
     - name: Copy Folders from Dev to QA
       run: |
@@ -38,4 +38,6 @@ jobs:
         git config --global user.name "chirag504"
         git add .
         git commit -m "Updated connection strings and paths for QA from Dev repo"
+        git remote remove origin
+        git remote add origin https://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@github.com/chirag504/adf_qa.git
         git push
