--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Clone QA Repository
       run: |
         # Clone into a separate directory outside the current repository
-        git clone https://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@github.com/chirag504/adf_qa.git ../adf_qa
+        git clone https://chirag504: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@github.com/chirag504/adf_qa.git ../adf_qa
 
     - name: Copy Folders from Dev to QA
       run: |
@@ -39,5 +39,5 @@ jobs:
         git add .
         git commit -m "Updated connection strings and paths for QA from Dev repo"
         git remote remove origin
-        git remote add origin https://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@github.com/chirag504/adf_qa.git
+        git remote add origin https://chirag504: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@github.com/chirag504/adf_qa.git
         git push --set-upstream origin main
