--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Commit and Push Changes to QA Repository
       working-directory: ../adf_qa
       run: |
+        git checkout -b qa_branch
         git config --global user.email "chirag@dreamitcs.com"
         git config --global user.name "chirag504"
         git add .
