--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,10 @@ jobs:
     - name: Commit and Push Changes to QA Repository
       working-directory: ../adf_qa
       run: |
-        git checkout -b qa_branch
         git config --global user.email "chirag@dreamitcs.com"
         git config --global user.name "chirag504"
         git add .
         git commit -m "Updated connection strings and paths for QA from Dev repo"
         git remote remove origin
         git remote add origin https://chirag504:${{ secrets.PAT_TOKEN }}@github.com/chirag504/adf_qa.git
-        git push --set-upstream origin qa_branch
+        git push --set-upstream origin main
